4.0.0 - iOS 17 and Android 14 support (#808)