@@ -21,10 +21,12 @@ import com.facebook.react.bridge.ReactModuleWithSpec;
 import com.facebook.react.bridge.ReadableArray;
 import com.facebook.react.common.build.ReactBuildConfig;
 import com.facebook.react.turbomodule.core.interfaces.TurboModule;
-import java.util.Arrays;
+
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
+
 import javax.annotation.Nullable;
 
 public abstract class NativePermissionsModuleSpec extends ReactContextBaseJavaModule implements ReactModuleWithSpec, TurboModule {
@@ -42,35 +44,27 @@ public abstract class NativePermissionsModuleSpec extends ReactContextBaseJavaMo
 
   @ReactMethod
   @DoNotStrip
-  public abstract void checkPermission(String permission, Promise promise);
-
-  @ReactMethod
-  @DoNotStrip
-  public abstract void shouldShowRequestPermissionRationale(String permission, Promise promise);
-
-  @ReactMethod
-  @DoNotStrip
-  public abstract void requestPermission(String permission, Promise promise);
-
-  @ReactMethod
-  @DoNotStrip
-  public abstract void checkMultiplePermissions(ReadableArray permissions, Promise promise);
-
-  @ReactMethod
-  @DoNotStrip
-  public abstract void requestMultiplePermissions(ReadableArray permissions, Promise promise);
-
-  @ReactMethod
-  @DoNotStrip
   public abstract void check(String permission, Promise promise);
 
   @ReactMethod
   @DoNotStrip
-  public abstract void checkLocationAccuracy(Promise promise);
+  public abstract void shouldShowRequestRationale(String permission, Promise promise);
 
   @ReactMethod
   @DoNotStrip
   public abstract void request(String permission, Promise promise);
+
+  @ReactMethod
+  @DoNotStrip
+  public abstract void checkMultiple(ReadableArray permissions, Promise promise);
+
+  @ReactMethod
+  @DoNotStrip
+  public abstract void requestMultiple(ReadableArray permissions, Promise promise);
+
+  @ReactMethod
+  @DoNotStrip
+  public abstract void checkLocationAccuracy(Promise promise);
 
   @ReactMethod
   @DoNotStrip
@@ -82,7 +76,7 @@ public abstract class NativePermissionsModuleSpec extends ReactContextBaseJavaMo
 
   @ReactMethod
   @DoNotStrip
-  public abstract void openLimitedPhotoLibraryPicker(Promise promise);
+  public abstract void openPhotoPicker(Promise promise);
 
   protected abstract Map<String, Object> getTypedExportedConstants();
 
@@ -90,23 +84,27 @@ public abstract class NativePermissionsModuleSpec extends ReactContextBaseJavaMo
   @DoNotStrip
   public final @Nullable Map<String, Object> getConstants() {
     Map<String, Object> constants = getTypedExportedConstants();
+
     if (ReactBuildConfig.DEBUG || ReactBuildConfig.IS_INTERNAL_BUILD) {
       Set<String> obligatoryFlowConstants = new HashSet<>();
-      Set<String> optionalFlowConstants = new HashSet<>(Arrays.asList(
-          "available"
-      ));
+      Set<String> optionalFlowConstants = new HashSet<>(List.of("available"));
       Set<String> undeclaredConstants = new HashSet<>(constants.keySet());
+
       undeclaredConstants.removeAll(obligatoryFlowConstants);
       undeclaredConstants.removeAll(optionalFlowConstants);
+
       if (!undeclaredConstants.isEmpty()) {
         throw new IllegalStateException(String.format("Native Module Flow doesn't declare constants: %s", undeclaredConstants));
       }
+
       undeclaredConstants = obligatoryFlowConstants;
       undeclaredConstants.removeAll(constants.keySet());
+
       if (!undeclaredConstants.isEmpty()) {
         throw new IllegalStateException(String.format("Native Module doesn't fill in constants: %s", undeclaredConstants));
       }
     }
+
     return constants;
   }
 }
